examples/test/testpolicy17689.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17689
  namespace: namespace471
spec:
  podSelector:
    matchLabels:
      key20: value24
      key42: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value4
          key36: value23
      podSelector:
        matchLabels:
          key34: value10
          key25: value26
          key43: value20
